Fix 'Mindfulness' section content image alignment on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -551,10 +551,12 @@ input {
 
     #mindful-body {
         flex-direction: column;
+        align-items: center;
     }
 
     #mindful-mental {
         flex-direction: column-reverse;
+        align-items: center;
     }
 
     footer, .row {
